RESOLVED FIXED314063
[JSC] test262 fail: test/built-ins/TypedArrayConstructors/ctors/typedarray-arg/throw-type-error-before-custom-proto-access.js
https://bugs.webkit.org/show_bug.cgi?id=314063
Summary [JSC] test262 fail: test/built-ins/TypedArrayConstructors/ctors/typedarray-ar...
Tetsuharu Ohzeki [UTC+9]
Reported 2026-05-05 03:05:27 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-05-12 03:06:14 PDT
Tetsuharu Ohzeki [UTC+9]
Comment 2 2026-05-18 02:48:25 PDT
EWS
Comment 3 2026-06-30 23:31:22 PDT
Committed 316237@main (b50d777c02d0): <https://commits.webkit.org/316237@main> Reviewed commits have been landed. Closing PR #65095 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.